--- a/css/index.css
+++ b/css/index.css
@@ -2,209 +2,183 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-    vertical-align: baseline;
-    box-sizing: border-box;
-}
-/* HTML5 display-role reset for older browsers */
-
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-
-body {
-    line-height: 1;
-    box-sizing: border-box;
-}
-
-ol, ul {
-	list-style: none;
-}
-
-blockquote, q {
-	quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
 * {
-    box-sizing: border-box;
+  font-family: 'Roboto';
 }
-
-html, body {
-    height: 100%;
-    font-family: 'Roboto';
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: 'Roboto';
+  vertical-align: baseline;
+  box-sizing: border-box;
 }
-
-h1, h2, h3, h4, h5 {
-    font-family: 'Roboto';
-    letter-spacing: 1px;
-    margin-bottom: 20px;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
-
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+html,
+body {
+  height: 100%;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  letter-spacing: 1px;
+}
+h1 {
+  font-size: 36px;
+}
 h2 {
-    font-size: 30px;
-    font-weight: bold;
+  font-size: 24px;
 }
-
-.container {
-  width: 880px;
-  margin: 0 auto; 
-  border: 1px solid black;
+h3 {
+  font-size: 24px;
 }
-
-@media (max-width: 500px) {
-    .container {
-        width: 100%;
-    }
-}
-
-/* header */
-header {
-    width: 100%;
-    box-sizing: border-box;
-}
-
-
-/* @media (max-width: 800px) {
-    header {
-        display: flex;
-        flex-direction: column-reverse;
-        margin-top: 75px;
-        align-items: center;
-        width: 100%;
-    }
-} */
-
-header nav {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  margin-top: 35px;
-  margin-bottom: 10px;
-  border-bottom: 1px solid #F7F7F7;
-}
-
-@media (max-width: 500px) {
-    header nav {
-        align-items: center;
-    }
-}
-
-header nav:first-child {
-    padding-left: 20px;
-}
-
-header nav:last-child {
-    padding-right: 20px;
-}
-
-header nav a {
-    font-size: 24px;
-    font-weight: bold;
-    color: #339EF9;
-    text-decoration: none;
-}
-
-header nav a:first-child {
-    margin-left: 10px;
-
-}
-
-header nav a:hover {
-  text-decoration: underline;
-}
-
-header nav a:first-child {
-  margin-left: 0;
-}
-
-header nav a:last-child {
-  margin-right: 0;
-}
-
-/* Welcome Section */
-
-.welcome {
-    background: #339EF9;
-    display: flex;
-    flex-direction: column;
-}
-
-@media (max-width: 500px) {
-    .welcome {
-        background: white;
-    }
-}
-
-.welcome .welcomeText {
-    display: flex;
-    flex-direction: column;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    margin-left: 50px;
-    justify-content: center;
-    align-content: center;
-    color: white;
-    font-weight: bold;  
-}
-
-.welcome .welcomeText h1 {
-    font-size: 36px;
-}
-
-@media (max-width: 500px) {
-    .welcome .welcomeText h1 {
-        color: #339EF9;
-    }
-}
-
-.welcome .welcomeText h2 {
-    font-size: 30px;
-}
-
-@media (max-width: 500px) {
-    .welcome .welcomeText h2 {
-        color: black;
-    }
-}
-
-/* Buttons (both top and buttom) */
-
 .welcome .topButton {
   background: #339EF9;
-  font-family:"Roboto";
+  font-family: "Roboto";
   font-size: 24px;
   font-weight: bold;
   color: white;
+  border-radius: 100%;
+  cursor: pointer;
+  text-align: center;
+  width: 180px;
+  height: 180px;
+  align-self: center;
+  border: none;
+  position: relative;
+  top: 420px;
+  background-image: linear-gradient(to left, #339EF9, #6CD6FA);
+}
+@media (max-width: 500px) {
+  .welcome .topButton {
+    background: white;
+    color: #339EF9;
+    top: 0;
+  }
+}
+.mainContent .topContent .bottomButton {
+  background: white;
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 24px;
+  color: #339EF9;
   border-radius: 100%;
   cursor: pointer;
   text-align: center;
@@ -215,135 +189,204 @@ header nav a:last-child {
   position: relative;
   top: 70px;
 }
-
 @media (max-width: 500px) {
-    .welcome .topButton {
-        background: white;
-        color: #339EF9;
-    }
+  .mainContent .topContent .bottomButton {
+    background: #339EF9;
+    color: white;
+    border: none;
+  }
 }
-
-.mainContent .topContent .bottomButton {
-    background: white;
-    font-family: "Roboto";
-    font-weight: bold;
-    font-size: 24px;
+/* Footer */
+footer {
+  margin: 50px 0;
+  text-align: center;
+  font-size: 20px;
+}
+@media (max-width: 500px) {
+  footer {
+    display: none;
+  }
+}
+/* Make sure to toggle visibility for final product! */
+footer p {
+  visibility: hidden;
+}
+/* Images */
+.desktopXR {
+  position: relative;
+}
+.container {
+  width: 1024px;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+@media (max-width: 500px) {
+  .container {
+    width: 100%;
+  }
+}
+.welcome {
+  width: 100%;
+  height: 813px;
+  background: url(/images/Desktop\ Graphic.svg);
+  background-size: contain 200%;
+  background-repeat: no-repeat;
+  background-position: 347px 76px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 500px) {
+  .welcome {
+    background-position: 50% 200px;
+    background-size: contain;
+  }
+}
+.welcome .welcomeText {
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin-left: 50px;
+  justify-content: center;
+  align-content: center;
+  color: white;
+}
+@media (max-width: 500px) {
+  .welcome .welcomeText {
+    padding-top: 48px;
+  }
+}
+@media (max-width: 500px) {
+  .welcome .welcomeText h1 {
     color: #339EF9;
-    border-radius: 100%;
-    cursor: pointer;
-    text-align: center;
-    width: 160px;
-    height: 160px;
-    align-self: center;
-    justify-self: center;
-    position: relative;
-    top: 70px;
+    margin-bottom: 0px;
+  }
 }
-
 @media (max-width: 500px) {
-    .mainContent .topContent .bottomButton {
-        background: #339EF9;
-        color: white;
-        border: none;
-    }
+  .welcome .welcomeText h2 {
+    color: black;
+  }
 }
-
 /* Main Content Section */
-
 .mainContent {
-  background: #F7F7F7;
+  width: 100%;
+  background: url(/images/iPhoneXR.svg);
+  background-repeat: no-repeat;
+  background-position: -40px;
+  background-color: #F7F7F7;
   color: #339EF9;
-  padding-top: 50px;
 }
-
+@media (max-width: 500px) {
+  .mainContent {
+    background: white;
+    padding-top: 50px;
+  }
+}
 .mainContent .topContent {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 0 10px;
+  padding-top: 290px;
   width: 50%;
-  margin: auto;
+  margin-left: 412px;
+  margin-right: 361px;
 }
-
 @media (max-width: 500px) {
-    .mainContent .topContent {
-        width: 100%;
-        padding-bottom: 20px;
-    }
-}
-
-.mainContent .topContent .indyContent {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    align-content: center;
-    margin: 10px auto;
-}
-
-@media (max-width: 500px) {
-    .mainContent .topContent .indyContent {
-        width: 100%;
-        justify-content: center;
-        align-content: center;
-        margin: 0 auto;
-        padding: 0 20px;
-    }
-}
-
-@media (max-width: 500px) {
-    .mainContent .topContent .indyContent p {
-        color: black;
-    }
-}
-
-.mainContent .topContent #features {
-    margin-bottom: 30px;
-    align-items: center;
-    padding-top: 100px;
-}
-
-@media (max-width: 500px) {
-    .mainContent .topContent .indyContent #features {
-        display: none;
-    }
-}
-
-.mainContent .topContent .indyContent h3 {
-    font-size: 20px;
-    font-weight: bold;
-    padding-top: 20px;
-}
-
-.mainContent .topContent .indyContent p {
-    font-size: 14px;
-    font-weight: bold;
-    padding-top: 10px;
+  .mainContent .topContent {
+    width: 73%;
     padding-bottom: 20px;
+  }
 }
-
-/* Footer */
-
-footer {
-    margin: 50px 0;
-    text-align: center;
-    font-size: 20px;
+.mainContent .topContent .indyContent {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: center;
 }
-
 @media (max-width: 500px) {
-    footer {
-        display: none;
-    }
+  .mainContent .topContent .indyContent {
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
 }
-
-/* Make sure to toggle visibility for final product! */
-footer p {
-    visibility: hidden;
+@media (max-width: 500px) {
+  .mainContent .topContent .indyContent p {
+    color: black;
+  }
 }
-
-/* Images */
-
-.desktopXR {
-    position: relative;
+.mainContent .topContent #features {
+  margin-bottom: 30px;
+  align-items: center;
+  font-size: 50px;
+}
+@media (max-width: 500px) {
+  .mainContent .topContent #features {
+    display: none;
+  }
+}
+.mainContent .topContent .indyContent h3 {
+  font-size: 21px;
+  font-weight: bold;
+  padding-top: 92px;
+}
+.mainContent .topContent .indyContent p {
+  font-size: 16px;
+  font-weight: bold;
+  padding-top: 11px;
+  line-height: 24px;
+}
+@media (max-width: 500px) {
+  .mainContent .topContent .indyContent p {
+    font-weight: bold;
+  }
+}
+header {
+  width: 100%;
+  max-width: 1024px;
+  height: 70px;
+  background-color: #FFFFFF;
+  box-shadow: 2px gray;
+}
+header nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding-top: 17px;
+  padding-bottom: 18px;
+  border-bottom: 1px solid #F7F7F7;
+}
+header nav:first-child {
+  padding-left: 32px;
+}
+header nav:last-child {
+  padding-right: 32px;
+}
+header nav a {
+  font-size: 30px;
+  font-weight: 500;
+  color: #339EF9;
+  text-decoration: none;
+}
+header nav a:first-child {
+  margin-left: 10px;
+}
+header nav a:hover {
+  text-decoration: underline;
+}
+@media (max-width: 500px) {
+  header nav a:hover {
+    text-decoration: none;
+  }
+}
+header nav a:first-child {
+  margin-left: 0;
+}
+header nav a:last-child {
+  margin-right: 0;
 }
