--- a/less/homepage.less
+++ b/less/homepage.less
@@ -63,9 +63,10 @@
 
 .mainContent {
     width: 100%;
+    height: 1277px;
     background: url(/images/iPhoneXR.svg);
     background-repeat: no-repeat;
-    background-position: -40px;
+    background-position: -20px, 290px;
     background-color: #F7F7F7;
     color: #339EF9;
 }
@@ -78,13 +79,13 @@
 }
 
 .mainContent .topContent {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-top: 290px;
-  width: 50%;
-  margin-left: 412px;
-  margin-right: 361px;
+    width: 251px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 290px;
+    margin-left: 412px;
+    margin-right: 361px;
 }
 
 @media (max-width: 500px) {
@@ -95,7 +96,7 @@
 }
 
 .mainContent .topContent .indyContent {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -121,8 +122,7 @@
 
 .mainContent .topContent #features {
     margin-bottom: 30px;
-    align-items: center;
-    font-size: 50px;
+    align-items: left;
 }
 
 @media (max-width: 500px) {
@@ -131,7 +131,7 @@
     }
 }
 
-.mainContent .topContent .indyContent h3 {
+.mainContent .topContent .indyContent h4 {
     font-size: 21px;
     font-weight: bold;
     padding-top: 92px;
