--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,23 +1,24 @@
 .welcome .topButton {
     background: #339EF9;
     font-family:"Roboto";
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 35px;
+    font-weight: 500;
     color: white;
     border-radius: 100%;
     cursor: pointer;
     text-align: center;
     width: 180px;
     height: 180px;
-    align-self: center;
     border: none;
     position: relative;
-    top: 420px;
+    top: 462px;
+    left: 422px;
     background-image: linear-gradient(
         to left,
         #339EF9,
         #6CD6FA
     );
+    box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5), 0 18px 40px -12px rgba(51,158,249,0.4);
   }
   
   @media (max-width: 500px) {
@@ -28,27 +29,29 @@
       }
   }
   
-  .mainContent .topContent .bottomButton {
-      background: white;
-      font-family: "Roboto";
-      font-weight: bold;
-      font-size: 24px;
-      color: #339EF9;
-      border-radius: 100%;
-      cursor: pointer;
-      text-align: center;
-      width: 160px;
-      height: 160px;
-      align-self: center;
-      justify-self: center;
-      position: relative;
-      top: 70px;
-  }
-  
-  @media (max-width: 500px) {
-      .mainContent .topContent .bottomButton {
-          background: #339EF9;
-          color: white;
-          border: none;
-      }
-  }
+    .mainContent .bottomButton {
+        background: white;
+        font-family: "Roboto";
+        font-weight: 500;
+        font-size: 35px;
+        color: #339EF9;
+        border-radius: 100%;
+        cursor: pointer;
+        width: 180px;
+        height: 180px;
+        align-self: center;
+        justify-self: center;
+        position: relative;
+        top: 226px;
+        left: 422px;
+        border: none;
+        box-shadow: 0 18px 40px -12px rgba(212,212,212,0.5);
+    }
+
+    @media (max-width: 500px) {
+        .mainContent .bottomButton {
+            background: #339EF9;
+            color: white;
+            border: none;
+        }
+    }
