--- a/less/footer.less
+++ b/less/footer.less
@@ -1,15 +1,48 @@
 /* Footer */
 
 footer {
-    margin: 50px 0;
-    text-align: center;
-    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 100%;
+    height: 272px;
+    background-color: #FFFFFF;
+    border-bottom: none;
+    box-shadow: 0 -1px 4px 0 rgba(rgba(212,212,212,0.5))
+    
 }
 
 @media (max-width: 500px) {
     footer {
         display: none;
     }
+}
+
+footer nav {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-top: 21px;
+    padding-bottom: 21px;
+    border-top: none;
+    box-shadow: 0 -1px 4px 0 rgba(rgba(212,212,212,0.5))
+}
+
+footer nav a:first-child {
+    padding-left: 32px;
+}
+
+footer nav a:last-child {
+    padding-right: 32px;
+}
+
+footer nav a {
+    font-size: 24px;
+    font-weight: bold;
+    color: #339EF9;
+    text-decoration: none;
 }
 
 /* Make sure to toggle visibility for final product! */
