--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,14 +1,13 @@
 .container {
-    width: 1024px;
+    max-width: 1024px;
+    width: 100%;
     margin: 0 auto; 
     border: 1px solid black;
-  }
-  
-  @media (max-width: 500px) {
-      .container {
-          width: 100%;
-      }
-  }
+
+    @media @mobile {
+        width: 100%
+    }
+}
 
   .welcome {
     width: 100%;
@@ -20,6 +19,11 @@
     background-color: white;
     display: flex;
     flex-direction: column;
+
+    @media @mobile {
+        height: 600px;
+        background-position: 50%;
+    }
 }
 
 @media (max-width: 500px) {
@@ -40,11 +44,7 @@
     color: white; 
 }
 
-@media (max-width: 500px) {
-    .welcome .welcomeText {
-        padding-top: 48px;
-    }
-}
+
 
 @media (max-width: 500px) {
     .welcome .welcomeText h1 {
@@ -69,6 +69,10 @@
     background-position: -20px, 290px;
     background-color: #F7F7F7;
     color: #339EF9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
 
 @media (max-width: 500px) {
