--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,4 +1,4 @@
-.welcome .topButton {
+.welcome-container .top-button {
     background: #339EF9;
     font-family:"Roboto";
     font-size: 35px;
@@ -22,14 +22,14 @@
   }
   
   @media (max-width: 500px) {
-      .welcome .topButton {
+      .welcome-container .top-button {
           background: white;
           color: #339EF9;
           top: 0;
       }
   }
   
-    .mainContent .bottomButton {
+    .main-content .bottom-button {
         background: white;
         font-family: "Roboto";
         font-weight: 500;
@@ -48,7 +48,7 @@
     }
 
     @media (max-width: 500px) {
-        .mainContent .bottomButton {
+        .main-content .bottom-button {
             background: #339EF9;
             color: white;
             border: none;
