--- a/less/homepage.less
+++ b/less/homepage.less
@@ -2,14 +2,13 @@
     max-width: 1024px;
     width: 100%;
     margin: 0 auto; 
-    border: 1px solid black;
 
     @media @mobile {
         width: 100%
     }
 }
 
-  .welcome {
+  .welcome-container {
     width: 100%;
     height: 813px;
     background: url(/images/Desktop\ Graphic.svg);
@@ -23,17 +22,12 @@
     @media @mobile {
         height: 600px;
         background-position: 50%;
-    }
-}
-
-@media (max-width: 500px) {
-    .welcome {
         background-position: 50% 200px;
         background-size: contain;
     }
 }
 
-.welcome .welcomeText {
+.welcome-container .welcome-content {
     display: flex;
     flex-direction: column;
     padding-top: 100px;
@@ -42,26 +36,16 @@
     justify-content: center;
     align-content: center;
     color: white; 
-}
 
-
-
-@media (max-width: 500px) {
-    .welcome .welcomeText h1 {
-        color: #339EF9;
-        margin-bottom: 0px;
-    }
-}
-
-@media (max-width: 500px) {
-    .welcome .welcomeText h2 {
-        color: black;
+    @media @mobile {
+        margin-left: 56px;
+        padding-top: 38px;
     }
 }
 
 /* Main Content Section */
 
-.mainContent {
+.main-content {
     width: 100%;
     height: 1277px;
     background: url(/images/iPhoneXR.svg);
@@ -76,13 +60,13 @@
 }
 
 @media (max-width: 500px) {
-    .mainContent {
+    .main-content {
         background: white;
         padding-top: 50px;
     }
 }
 
-.mainContent .topContent {
+.main-content .mission-statement {
     width: 251px;
     display: flex;
     flex-direction: column;
@@ -93,13 +77,13 @@
 }
 
 @media (max-width: 500px) {
-    .mainContent .topContent {
+    .main-content .mission-statement {
         width: 73%;
         padding-bottom: 20px;
     }
 }
 
-.mainContent .topContent .indyContent {
+.main-content .mission-statement .indy-content {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -109,7 +93,7 @@
 }
 
 @media (max-width: 500px) {
-    .mainContent .topContent .indyContent {
+    .main-content .mission-statement .indy-content {
         width: 100%;
         justify-content: center;
         align-content: center;
@@ -119,29 +103,29 @@
 }
 
 @media (max-width: 500px) {
-    .mainContent .topContent .indyContent p {
+    .main-content .mission-statement .indy-content #indy-info {
         color: black;
     }
 }
 
-.mainContent .topContent #features {
+.main-content .mission-statement #features {
     margin-bottom: 30px;
     align-items: left;
 }
 
 @media (max-width: 500px) {
-    .mainContent .topContent #features {
+    .main-content .mission-statement #features {
         display: none;
     }
 }
 
-.mainContent .topContent .indyContent h4 {
+.main-content .mission-statement .indy-content #indy-header {
     font-size: 21px;
     font-weight: bold;
     padding-top: 92px;
 }
 
-.mainContent .topContent .indyContent p {
+.main-content .mission-statement .indy-content #indy-info {
     font-size: 16px;
     font-weight: bold;
     padding-top: 11px;
@@ -149,7 +133,7 @@
 }
 
 @media (max-width: 500px) {
-    .mainContent .topContent .indyContent p {
+    .main-content .mission-statement .indy-content #indy-info {
         font-weight: bold;
     }
 }
