Working on the 'About' page

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -40,8 +40,8 @@ header nav:last-child {
 }
 
 header nav a {
+    font-family: 'Open Sans';
     font-size: 30px;
-    font-weight: 500;
     color: #339EF9;
     text-decoration: none;
 
