--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: 'Roboto';
+  font: 'inherit';
   vertical-align: baseline;
   box-sizing: border-box;
 }
@@ -133,29 +133,12 @@ html,
 body {
   height: 100%;
 }
-h1,
-h2,
-h3,
-h4,
-h5 {
-  letter-spacing: 1px;
+.gradient {
+  background-image: linear-gradient(#339EF9, white);
 }
-h1 {
-  font-size: 36px;
-  font-weight: 500;
-}
-h2 {
-  font-size: 24px;
-}
-h3 {
-  font-size: 50px;
-}
-h4 {
-  font-size: 21px;
-}
-.welcome-container .top-button {
+.welcomeContainer .topButton {
   background: #339EF9;
-  font-family: "Roboto";
+  font-family: 'Open Sans';
   font-size: 35px;
   font-weight: 500;
   color: white;
@@ -166,21 +149,22 @@ h4 {
   height: 180px;
   border: none;
   position: relative;
-  top: 462px;
-  left: 422px;
-  background-image: linear-gradient(to left, #339EF9, #6CD6FA);
+  top: 430px;
+  align-self: center;
   box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5), 0 18px 40px -12px rgba(51, 158, 249, 0.4);
+  background-image: linear-gradient(to left, #339EF9, #6CD6FA);
 }
 @media (max-width: 500px) {
-  .welcome-container .top-button {
+  .welcomeContainer .topButton {
     background: white;
+    font-size: 30px;
     color: #339EF9;
-    top: 0;
+    top: 335px;
   }
 }
-.main-content .bottom-button {
+.mainContent .bottomButton {
   background: white;
-  font-family: "Roboto";
+  font-family: "Open Sans";
   font-weight: 500;
   font-size: 35px;
   color: #339EF9;
@@ -196,10 +180,12 @@ h4 {
   box-shadow: 0 18px 40px -12px rgba(212, 212, 212, 0.5);
 }
 @media (max-width: 500px) {
-  .main-content .bottom-button {
+  .mainContent .bottomButton {
     background: #339EF9;
+    font-size: 30px;
     color: white;
     border: none;
+    top: 55px;
   }
 }
 /* Footer */
@@ -235,6 +221,7 @@ footer nav a:last-child {
   padding-right: 32px;
 }
 footer nav a {
+  font-family: 'Open Sans';
   font-size: 24px;
   font-weight: bold;
   color: #339EF9;
@@ -256,28 +243,29 @@ footer p {
 @media (max-width: 500px) {
   .container {
     width: 100%;
+    height: auto;
   }
 }
-.welcome-container {
+.welcomeContainer {
   width: 100%;
   height: 813px;
+  display: flex;
+  flex-direction: column;
   background: url(/images/Desktop\ Graphic.svg);
   background-size: contain 200%;
   background-repeat: no-repeat;
   background-position: 347px 76px;
   background-color: white;
-  display: flex;
-  flex-direction: column;
 }
 @media (max-width: 500px) {
-  .welcome-container {
+  .welcomeContainer {
     height: 600px;
     background-position: 50%;
     background-position: 50% 200px;
     background-size: contain;
   }
 }
-.welcome-container .welcome-content {
+.welcomeContainer .welcomeContent {
   display: flex;
   flex-direction: column;
   padding-top: 100px;
@@ -288,13 +276,40 @@ footer p {
   color: white;
 }
 @media (max-width: 500px) {
-  .welcome-container .welcome-content {
+  .welcomeContainer .welcomeContent {
     margin-left: 56px;
     padding-top: 38px;
   }
 }
+.welcomeContainer .welcomeContent #title {
+  font-family: 'Open Sans';
+  font-size: 64px;
+  font-weight: 500;
+  letter-spacing: 0.87px;
+  color: #339EF9;
+}
+@media (max-width: 500px) {
+  .welcomeContainer .welcomeContent #title {
+    font-size: 36px;
+    font-weight: 600;
+    letter-spacing: 0.8px;
+  }
+}
+.welcomeContainer .welcomeContent #subtitle {
+  font-family: 'Nunito';
+  font-size: 40px;
+  font-weight: normal;
+  color: #339EF9;
+  padding-top: 4px;
+}
+@media (max-width: 500px) {
+  .welcomeContainer .welcomeContent #subtitle {
+    font-size: 24px;
+    color: black;
+  }
+}
 /* Main Content Section */
-.main-content {
+.mainContent {
   width: 100%;
   height: 1277px;
   background: url(/images/iPhoneXR.svg);
@@ -308,12 +323,14 @@ footer p {
   align-content: center;
 }
 @media (max-width: 500px) {
-  .main-content {
+  .mainContent {
+    height: auto;
     background: white;
-    padding-top: 50px;
+    padding-top: 20px;
+    margin-bottom: 50px;
   }
 }
-.main-content .mission-statement {
+.mainContent .missionStatement {
   width: 251px;
   display: flex;
   flex-direction: column;
@@ -323,12 +340,13 @@ footer p {
   margin-right: 361px;
 }
 @media (max-width: 500px) {
-  .main-content .mission-statement {
-    width: 73%;
-    padding-bottom: 20px;
+  .mainContent .missionStatement {
+    width: 100%;
+    padding-top: 120px;
+    margin: auto;
   }
 }
-.main-content .mission-statement .indy-content {
+.mainContent .missionStatement .indyContent {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -337,43 +355,124 @@ footer p {
   align-content: center;
 }
 @media (max-width: 500px) {
-  .main-content .mission-statement .indy-content {
+  .mainContent .missionStatement .indyContent {
     width: 100%;
     justify-content: center;
     align-content: center;
     margin: 0 auto;
-    padding: 0 20px;
+    padding-left: 55px;
+    padding-right: 55px;
   }
 }
-@media (max-width: 500px) {
-  .main-content .mission-statement .indy-content #indy-info {
-    color: black;
-  }
-}
-.main-content .mission-statement #features {
+.mainContent .missionStatement #feature {
+  font-family: 'Open Sans';
+  font-size: 50px;
+  font-weight: bold;
   margin-bottom: 30px;
   align-items: left;
 }
 @media (max-width: 500px) {
-  .main-content .mission-statement #features {
+  .mainContent .missionStatement #feature {
     display: none;
   }
 }
-.main-content .mission-statement .indy-content #indy-header {
+.mainContent .missionStatement .indyContent .indyHeader {
+  font-family: 'Open Sans';
   font-size: 21px;
   font-weight: bold;
   padding-top: 92px;
 }
-.main-content .mission-statement .indy-content #indy-info {
+@media (max-width: 500px) {
+  .mainContent .missionStatement .indyContent .indyHeader {
+    font-size: 24px;
+    font-weight: 600;
+    padding-top: 38.5px;
+  }
+}
+.mainContent .missionStatement .indyContent .indyInfo {
+  font-family: 'Nunito';
   font-size: 16px;
   font-weight: bold;
   padding-top: 11px;
   line-height: 24px;
 }
 @media (max-width: 500px) {
-  .main-content .mission-statement .indy-content #indy-info {
-    font-weight: bold;
+  .mainContent .missionStatement .indyContent .indyInfo {
+    font-size: 18px;
+    font-weight: normal;
+    padding-top: 8px;
+    color: black;
   }
+}
+.aboutContainer {
+  background: url(/images/Desktop\ About\ Graphic.svg);
+  background-size: 568px 674px;
+  background-repeat: no-repeat;
+  background-position: 100% -70px;
+  background-color: white;
+}
+.aboutContainer .aboutTitle #title {
+  font-family: 'Roboto';
+  font-size: 36px;
+  color: #339EF9;
+  font-weight: 500;
+  margin-left: 72px;
+  padding-top: 480px;
+}
+.aboutContainer .aboutWrapper {
+  width: 64%;
+  margin-left: 72px;
+  padding-top: 39px;
+  display: flex;
+  flex-direction: column;
+}
+.aboutContainer .aboutWrapper .smallContentContainer {
+  border: 1px solid black;
+  display: flex;
+}
+.meetTheTeam {
+  background: url(/images/People.svg);
+  background-color: #E9E8E8;
+  background-size: 663px 227px contain;
+  background-repeat: no-repeat;
+  background-position: 50% 100px;
+}
+.meetTheTeam h2 {
+  font-family: 'Open Sans';
+  font-size: 50px;
+  color: #339EF9;
+  font-weight: bold;
+  margin-left: 72px;
+  padding-top: 460px;
+}
+.meetTheTeam .team {
+  display: flex;
+  flex-direction: column;
+  padding-left: 418px;
+}
+.meetTheTeam .team #victor {
+  background-size: 243px 205px;
+  background-repeat: no-repeat;
+  background-position: 50px 100px;
+}
+.meetTheTeam .team .teamMembers {
+  padding-top: 152px;
+}
+.meetTheTeam .team .teamMembers .name {
+  font-family: 'Open Sans';
+  font-size: 36px;
+  color: #339EF9;
+  font-weight: bold;
+}
+.meetTheTeam .team .teamMembers #firstName {
+  padding-top: 34px;
+}
+.meetTheTeam .team .teamMembers .role {
+  font-family: 'Nunito';
+  font-size: 24px;
+  color: #4E4E4E;
+  font-weight: bold;
+  padding-top: 19px;
 }
 header {
   width: 100%;
@@ -417,8 +516,8 @@ header nav:last-child {
   }
 }
 header nav a {
+  font-family: 'Open Sans';
   font-size: 30px;
-  font-weight: 500;
   color: #339EF9;
   text-decoration: none;
 }
