--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,6 +1,6 @@
-.welcome-container .top-button {
+.welcomeContainer .topButton {
     background: #339EF9;
-    font-family:"Roboto";
+    font-family: 'Open Sans';
     font-size: 35px;
     font-weight: 500;
     color: white;
@@ -11,27 +11,28 @@
     height: 180px;
     border: none;
     position: relative;
-    top: 462px;
-    left: 422px;
+    top: 430px;
+    align-self: center;
+    box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5), 0 18px 40px -12px rgba(51,158,249,0.4);
     background-image: linear-gradient(
         to left,
         #339EF9,
         #6CD6FA
     );
-    box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5), 0 18px 40px -12px rgba(51,158,249,0.4);
-  }
-  
-  @media (max-width: 500px) {
-      .welcome-container .top-button {
-          background: white;
-          color: #339EF9;
-          top: 0;
-      }
-  }
-  
-    .main-content .bottom-button {
+
+    // .button();
+
+    @media @mobile {
         background: white;
-        font-family: "Roboto";
+        font-size: 30px;
+        color: #339EF9;
+        top: 335px;
+    }
+  }
+  
+    .mainContent .bottomButton {
+        background: white;
+        font-family: "Open Sans";
         font-weight: 500;
         font-size: 35px;
         color: #339EF9;
@@ -45,12 +46,12 @@
         border: none;
         top: 150px;
         box-shadow: 0 18px 40px -12px rgba(212,212,212,0.5);
-    }
 
-    @media (max-width: 500px) {
-        .main-content .bottom-button {
+        @media @mobile {
             background: #339EF9;
+            font-size: 30px;
             color: white;
             border: none;
+            top: 55px;
         }
     }
