--- a/less/footer.less
+++ b/less/footer.less
@@ -39,6 +39,7 @@ footer nav a:last-child {
 }
 
 footer nav a {
+    font-family: 'Open Sans';
     font-size: 24px;
     font-weight: bold;
     color: #339EF9;
