--- a/less/homepage.less
+++ b/less/homepage.less
@@ -4,20 +4,21 @@
     margin: 0 auto; 
 
     @media @mobile {
-        width: 100%
+        width: 100%;
+        height: auto;
     }
 }
 
-  .welcome-container {
+  .welcomeContainer {
     width: 100%;
     height: 813px;
+    display: flex;
+    flex-direction: column;
     background: url(/images/Desktop\ Graphic.svg);
     background-size: contain 200%;
     background-repeat: no-repeat;
     background-position: 347px 76px;
     background-color: white;
-    display: flex;
-    flex-direction: column;
 
     @media @mobile {
         height: 600px;
@@ -27,7 +28,7 @@
     }
 }
 
-.welcome-container .welcome-content {
+.welcomeContainer .welcomeContent {
     display: flex;
     flex-direction: column;
     padding-top: 100px;
@@ -43,9 +44,36 @@
     }
 }
 
+.welcomeContainer .welcomeContent #title {
+    font-family: 'Open Sans';
+    font-size: 64px;
+    font-weight: 500;
+    letter-spacing: .87px;
+    color: #339EF9;
+
+    @media @mobile {
+        font-size: 36px;
+        font-weight: 600;
+        letter-spacing: .80px;
+    }
+}
+
+.welcomeContainer .welcomeContent #subtitle {
+    font-family: 'Nunito';
+    font-size: 40px;
+    font-weight: normal;
+    color: #339EF9;
+    padding-top: 4px;
+
+    @media @mobile {
+        font-size: 24px;
+        color: black;
+    }
+}
+
 /* Main Content Section */
 
-.main-content {
+.mainContent {
     width: 100%;
     height: 1277px;
     background: url(/images/iPhoneXR.svg);
@@ -57,16 +85,16 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-}
 
-@media (max-width: 500px) {
-    .main-content {
+    @media @mobile {
+        height: auto;
         background: white;
-        padding-top: 50px;
+        padding-top: 20px;
+        margin-bottom: 50px;
     }
 }
 
-.main-content .mission-statement {
+.mainContent .missionStatement {
     width: 251px;
     display: flex;
     flex-direction: column;
@@ -74,66 +102,68 @@
     padding-top: 290px;
     margin-left: 412px;
     margin-right: 361px;
-}
 
-@media (max-width: 500px) {
-    .main-content .mission-statement {
-        width: 73%;
-        padding-bottom: 20px;
+    @media @mobile {
+        width: 100%;
+        padding-top: 120px;
+        margin: auto;
     }
 }
 
-.main-content .mission-statement .indy-content {
+.mainContent .missionStatement .indyContent {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     align-content: center;
-}
 
-@media (max-width: 500px) {
-    .main-content .mission-statement .indy-content {
+    @media @mobile {
         width: 100%;
         justify-content: center;
         align-content: center;
         margin: 0 auto;
-        padding: 0 20px;
+        padding-left: 55px;
+        padding-right: 55px;
     }
 }
 
-@media (max-width: 500px) {
-    .main-content .mission-statement .indy-content #indy-info {
-        color: black;
-    }
-}
-
-.main-content .mission-statement #features {
+.mainContent .missionStatement #feature {
+    font-family: 'Open Sans';
+    font-size: 50px;
+    font-weight: bold;
     margin-bottom: 30px;
     align-items: left;
-}
 
-@media (max-width: 500px) {
-    .main-content .mission-statement #features {
+    @media @mobile {
         display: none;
     }
 }
 
-.main-content .mission-statement .indy-content #indy-header {
+.mainContent .missionStatement .indyContent .indyHeader {
+    font-family: 'Open Sans';
     font-size: 21px;
     font-weight: bold;
     padding-top: 92px;
+
+    @media @mobile {
+        font-size: 24px;
+        font-weight: 600;
+        padding-top: 38.5px;
+    }
 }
 
-.main-content .mission-statement .indy-content #indy-info {
+.mainContent .missionStatement .indyContent .indyInfo {
+    font-family: 'Nunito';
     font-size: 16px;
     font-weight: bold;
     padding-top: 11px;
     line-height: 24px;
-}
 
-@media (max-width: 500px) {
-    .main-content .mission-statement .indy-content #indy-info {
-        font-weight: bold;
+    @media @mobile {
+        font-size: 18px;
+        font-weight: normal;
+        padding-top: 8px;
+        color: black;
     }
 }
