--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,3 +1,19 @@
+.aboutFontStyling() {
+    font-family: 'Nunito';
+    font-weight: normal;
+    font-size: 24px;
+    letter-spacing: 0.53px;
+    color: #4E4E4E;
+}
+
+.bothContainers() {
+    width: 100%;
+    height: 813px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
 .gradient {
     background-image:
         linear-gradient(
@@ -5,8 +21,8 @@
         );
 }
 
-.button {
-    font-family: 'Roboto';
+.button() {
+    font-family: 'Open Sans';
     font-size: 24px;
     font-weight: bold;
     color: #FFFFFFF;
