--- a/less/reset.less
+++ b/less/reset.less
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: 'Roboto';
+	font: 'inherit';
     vertical-align: baseline;
     box-sizing: border-box;
 }
@@ -59,25 +59,4 @@ table {
 
 html, body {
     height: 100%;
-}
-
-h1, h2, h3, h4, h5 {
-    letter-spacing: 1px;
-}
-
-h1 {
-    font-size: 36px;
-    font-weight: 500;
-}
-
-h2 {
-    font-size: 24px;
-}
-
-h3 {
-    font-size: 50px;
-}
-
-h4 {
-    font-size: 21px;
 }
