--- a/less/navigation.less
+++ b/less/navigation.less
@@ -21,22 +21,20 @@ header nav {
       padding-top: 11px;
       padding-bottom: 11px;
   }
-}
-
-header nav:first-child {
+&:first-child {
     padding-left: 32px;
 
     @media @mobile {
         padding-left: 24px;
     }
 }
-
-header nav:last-child {
+&:last-child {
     padding-right: 32px;
 
     @media @mobile {
         padding-right: 24px;
     }
+}
 }
 
 header nav a {
@@ -48,27 +46,12 @@ header nav a {
     @media @mobile {
         font-size: 24px;
     }
-}
 
-header nav a:first-child {
-    margin-left: 10px;
-
-}
-
-header nav a:hover {
+&:hover {
   text-decoration: underline;
-}
 
-@media (max-width: 500px) {
-    header nav a:hover {
-        text-decoration: none;
-    }
+  @media @mobile {
+      text-decoration: none;
+  }
 }
-
-header nav a:first-child {
-  margin-left: 0;
-}
-
-header nav a:last-child {
-  margin-right: 0;
 }
