--- a/css/index.css
+++ b/css/index.css
@@ -280,8 +280,9 @@ footer nav a {
 .welcomeContainer .welcomeContent #title {
   font-family: 'Open Sans';
   font-size: 64px;
-  font-weight: 500;
-  letter-spacing: 0.87px;
+  font-weight: bold;
+  line-height: 87px;
+  letter-spacing: 0.8px;
   color: #339EF9;
 }
 @media (max-width: 500px) {
