--- a/less/homepage.less
+++ b/less/homepage.less
@@ -47,8 +47,9 @@
 .welcomeContainer .welcomeContent #title {
     font-family: 'Open Sans';
     font-size: 64px;
-    font-weight: 500;
-    letter-spacing: .87px;
+    font-weight: bold;
+    line-height: 87px;
+    letter-spacing: 0.8px;
     color: #339EF9;
 
     @media @mobile {
