--- a/less/navigation.less
+++ b/less/navigation.less
@@ -40,11 +40,17 @@ header nav {
 header nav a {
     font-family: 'Open Sans';
     font-size: 30px;
+    font-weight: normal;
+    letter-spacing: -0.96px;
+    line-height: 41px;
     color: #339EF9;
     text-decoration: none;
 
     @media @mobile {
         font-size: 24px;
+        font-weight: 600;
+        letter-spacing: -0.77px;
+        line-height: 33px;
     }
 
 &:hover {
