--- a/css/index.css
+++ b/css/index.css
@@ -149,10 +149,9 @@ body {
   height: 180px;
   border: none;
   position: relative;
-  top: 430px;
+  top: 375px;
   align-self: center;
   box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5), 0 18px 40px -12px rgba(51, 158, 249, 0.4);
-  background-image: linear-gradient(to left, #339EF9, #6CD6FA);
 }
 @media (max-width: 500px) {
   .welcomeContainer .topButton {
@@ -176,7 +175,7 @@ body {
   justify-self: center;
   position: relative;
   border: none;
-  top: 150px;
+  top: 90px;
   box-shadow: 0 18px 40px -12px rgba(212, 212, 212, 0.5);
 }
 @media (max-width: 500px) {
@@ -186,6 +185,7 @@ body {
     color: white;
     border: none;
     top: 55px;
+    padding-bottom: 20px;
   }
 }
 /* Footer */
@@ -289,29 +289,28 @@ footer nav a {
   .welcomeContainer .welcomeContent #title {
     font-size: 36px;
     font-weight: 600;
-    letter-spacing: 0.8px;
+    line-height: 49px;
   }
 }
 .welcomeContainer .welcomeContent #subtitle {
-  font-family: 'Nunito';
+  font-family: "Nunito";
   font-size: 40px;
   font-weight: normal;
+  line-height: 54px;
   color: #339EF9;
   padding-top: 4px;
 }
 @media (max-width: 500px) {
   .welcomeContainer .welcomeContent #subtitle {
     font-size: 24px;
-    color: black;
+    line-height: 32px;
+    color: #4E4E4E;
   }
 }
 /* Main Content Section */
 .mainContent {
   width: 100%;
   height: 1277px;
-  background: url(/images/iPhoneXR.svg);
-  background-repeat: no-repeat;
-  background-position: -20px, 290px;
   background-color: #F7F7F7;
   color: #339EF9;
   display: flex;
@@ -327,14 +326,33 @@ footer nav a {
     margin-bottom: 50px;
   }
 }
+.mainContent .middleContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 62%;
+  margin: auto;
+  padding-top: 290px;
+}
+@media (max-width: 500px) {
+  .mainContent .middleContainer {
+    width: 75%;
+    padding-top: 80px;
+  }
+}
+.mainContent .middleContainer img {
+  size: 447px 926px;
+}
+@media (max-width: 500px) {
+  .mainContent .middleContainer img {
+    display: none;
+  }
+}
 .mainContent .missionStatement {
-  width: 251px;
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 290px;
-  margin-left: 412px;
-  margin-right: 361px;
+  padding-left: 30px;
 }
 @media (max-width: 500px) {
   .mainContent .missionStatement {
@@ -348,7 +366,6 @@ footer nav a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
   align-content: center;
 }
 @media (max-width: 500px) {
@@ -357,14 +374,13 @@ footer nav a {
     justify-content: center;
     align-content: center;
     margin: 0 auto;
-    padding-left: 55px;
-    padding-right: 55px;
   }
 }
 .mainContent .missionStatement #feature {
   font-family: 'Open Sans';
   font-size: 50px;
   font-weight: bold;
+  line-height: 64px;
   margin-bottom: 30px;
   align-items: left;
 }
@@ -375,30 +391,30 @@ footer nav a {
 }
 .mainContent .missionStatement .indyContent .indyHeader {
   font-family: 'Open Sans';
-  font-size: 21px;
+  font-size: 24px;
   font-weight: bold;
+  line-height: 31px;
   padding-top: 92px;
 }
 @media (max-width: 500px) {
   .mainContent .missionStatement .indyContent .indyHeader {
-    font-size: 24px;
     font-weight: 600;
     padding-top: 38.5px;
   }
 }
 .mainContent .missionStatement .indyContent .indyInfo {
   font-family: 'Nunito';
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
-  padding-top: 11px;
   line-height: 24px;
+  padding-top: 11px;
+  color: #4E4E4E;
 }
 @media (max-width: 500px) {
   .mainContent .missionStatement .indyContent .indyInfo {
-    font-size: 18px;
     font-weight: normal;
     padding-top: 8px;
-    color: black;
+    color: #4E4E4E;
   }
 }
 .container {
@@ -410,6 +426,12 @@ footer nav a {
   background-repeat: no-repeat;
   background-position: 100% -70px;
   background-color: white;
+}
+@media (max-width: 500px) {
+  .aboutContainer {
+    background-size: contain;
+    background-position: 100% 0px;
+  }
 }
 .aboutContainer .aboutTitle #title {
   font-family: 'Roboto';
@@ -426,9 +448,23 @@ footer nav a {
   display: flex;
   flex-direction: column;
 }
+@media (max-width: 500px) {
+  .aboutContainer .aboutWrapper {
+    width: 60%;
+    align-items: center;
+  }
+}
 .aboutContainer .aboutWrapper .smallContentContainer {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .aboutContainer .aboutWrapper .smallContentContainer {
+    flex-direction: column;
+    width: 100%;
+    align-items: space-around;
+  }
 }
 .aboutContainer .aboutWrapper .smallContentContainer .aboutHeader {
   font-family: 'Nunito';
@@ -437,6 +473,15 @@ footer nav a {
   letter-spacing: 0.53px;
   color: #4E4E4E;
   width: 20%;
+}
+@media (max-width: 500px) {
+  .aboutContainer .aboutWrapper .smallContentContainer .aboutHeader {
+    font-family: "Open Sans";
+    font-weight: 600;
+    line-height: 31px;
+    color: #339EF9;
+    width: 100%;
+  }
 }
 .aboutContainer .aboutWrapper .smallContentContainer .aboutContent {
   font-family: 'Nunito';
@@ -448,6 +493,14 @@ footer nav a {
   line-height: 32px;
   padding-bottom: 44px;
 }
+@media (max-width: 500px) {
+  .aboutContainer .aboutWrapper .smallContentContainer .aboutContent {
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: normal;
+    width: 100%;
+  }
+}
 .aboutContainer .aboutWrapper .smallContentContainer #lastEntry {
   padding-bottom: 115px;
 }
@@ -458,6 +511,11 @@ footer nav a {
   background-repeat: no-repeat;
   background-position: 50% 100px;
 }
+@media (max-width: 500px) {
+  .meetTheTeam {
+    background: white;
+  }
+}
 .meetTheTeam h2 {
   font-family: 'Open Sans';
   font-size: 50px;
@@ -466,10 +524,22 @@ footer nav a {
   margin-left: 72px;
   padding-top: 460px;
 }
+@media (max-width: 500px) {
+  .meetTheTeam h2 {
+    font-size: 36px;
+    font-weight: 600;
+    padding-top: 20px;
+  }
+}
 .meetTheTeam .team {
   display: flex;
   flex-direction: column;
   width: 80%;
+}
+@media (max-width: 500px) {
+  .meetTheTeam .team {
+    width: 100%;
+  }
 }
 .meetTheTeam .team .teamMembers {
   display: flex;
@@ -479,6 +549,14 @@ footer nav a {
 }
 .meetTheTeam .team .teamMembers:first-child {
   padding-top: 50px;
+}
+@media (max-width: 500px) {
+  .meetTheTeam .team .teamMembers {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding-left: 0px;
+    margin: auto;
+  }
 }
 .meetTheTeam .team .teamMembers .profileContainer {
   width: 66%;
@@ -492,6 +570,13 @@ footer nav a {
   color: #339EF9;
   font-weight: bold;
 }
+@media (max-width: 500px) {
+  .meetTheTeam .team .teamMembers .name {
+    font-size: 24px;
+    font-weight: 600;
+    width: 100%;
+  }
+}
 .meetTheTeam .team .teamMembers #firstName {
   padding-top: 34px;
 }
@@ -501,6 +586,13 @@ footer nav a {
   color: #4E4E4E;
   font-weight: bold;
   padding-top: 19px;
+}
+@media (max-width: 500px) {
+  .meetTheTeam .team .teamMembers .role {
+    font-size: 18px;
+    font-weight: normal;
+    width: 100%;
+  }
 }
 header {
   width: 100%;
@@ -546,12 +638,18 @@ header nav:last-child {
 header nav a {
   font-family: 'Open Sans';
   font-size: 30px;
+  font-weight: normal;
+  letter-spacing: -0.96px;
+  line-height: 41px;
   color: #339EF9;
   text-decoration: none;
 }
 @media (max-width: 500px) {
   header nav a {
     font-size: 24px;
+    font-weight: 600;
+    letter-spacing: -0.77px;
+    line-height: 33px;
   }
 }
 header nav a:hover {
