--- a/less/homepage.less
+++ b/less/homepage.less
@@ -55,20 +55,22 @@
     @media @mobile {
         font-size: 36px;
         font-weight: 600;
-        letter-spacing: .80px;
+        line-height: 49px;
     }
 }
 
 .welcomeContainer .welcomeContent #subtitle {
-    font-family: 'Nunito';
+    font-family: "Nunito";
     font-size: 40px;
     font-weight: normal;
+    line-height: 54px;
     color: #339EF9;
     padding-top: 4px;
 
     @media @mobile {
         font-size: 24px;
-        color: black;
+        line-height: 32px;
+        color: #4E4E4E
     }
 }
 
@@ -77,9 +79,6 @@
 .mainContent {
     width: 100%;
     height: 1277px;
-    background: url(/images/iPhoneXR.svg);
-    background-repeat: no-repeat;
-    background-position: -20px, 290px;
     background-color: #F7F7F7;
     color: #339EF9;
     display: flex;
@@ -95,14 +94,33 @@
     }
 }
 
+.mainContent .middleContainer {
+    display: flex;
+    justify-content: space-between;
+    width: 62%;
+    margin: auto;
+    padding-top: 290px;
+
+    @media @mobile {
+        width: 75%;
+        padding-top: 80px;
+    }
+}
+
+.mainContent .middleContainer img {
+    size: 447px 926px;
+
+    @media @mobile {
+        display: none;
+    }
+}
+
 .mainContent .missionStatement {
-    width: 251px;
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 290px;
-    margin-left: 412px;
-    margin-right: 361px;
+    padding-left: 30px;
 
     @media @mobile {
         width: 100%;
@@ -116,7 +134,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
     align-content: center;
 
     @media @mobile {
@@ -124,8 +141,6 @@
         justify-content: center;
         align-content: center;
         margin: 0 auto;
-        padding-left: 55px;
-        padding-right: 55px;
     }
 }
 
@@ -133,6 +148,7 @@
     font-family: 'Open Sans';
     font-size: 50px;
     font-weight: bold;
+    line-height: 64px;
     margin-bottom: 30px;
     align-items: left;
 
@@ -143,12 +159,12 @@
 
 .mainContent .missionStatement .indyContent .indyHeader {
     font-family: 'Open Sans';
-    font-size: 21px;
+    font-size: 24px;
     font-weight: bold;
+    line-height: 31px;
     padding-top: 92px;
 
     @media @mobile {
-        font-size: 24px;
         font-weight: 600;
         padding-top: 38.5px;
     }
@@ -156,15 +172,15 @@
 
 .mainContent .missionStatement .indyContent .indyInfo {
     font-family: 'Nunito';
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
-    padding-top: 11px;
     line-height: 24px;
+    padding-top: 11px;
+    color: #4E4E4E;
 
     @media @mobile {
-        font-size: 18px;
         font-weight: normal;
         padding-top: 8px;
-        color: black;
+        color: #4E4E4E;
     }
 }
